# template_behave_project

./: .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
app/: forms.py  routes.py
app/templates/: register.html
features/: registration.feature
features/steps/: registration_steps.py
